--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "node-localstorage": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-jwt": "^1.3.0",
