--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.1.7",
     "node-localstorage": "^3.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-jwt": "^1.3.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.1",
